@@ -1,3 +1,11 @@
+2023-10-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
+	Handle `unmounted'.
+
+	* tramp-sh.el (tramp-sh-handle-file-notify-add-watch):
+	Handle `unmount' and `unmounted'.
+
 2023-10-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (ls-lisp-dirs-first, ls-lisp-emulation)
